--- a/Probability Distributions Notes.ipynb
+++ b/Probability Distributions Notes.ipynb
@@ -27,13 +27,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -787,6 +780,218 @@
    ],
    "source": [
     "battery_life.isf(.25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BINOMIAL DISTRIBUTION:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Binomial distribution is a <ins>discrete</ins> probability distribution.\n",
+    " \n",
+    " \n",
+    "Defined by \n",
+    " - Number of Trials (sequence of n trials)\n",
+    " - Probability of 'success' in each trial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assumptions:\n",
+    "- Two potential outcome per trial\n",
+    "- Probability of success is same across all trials\n",
+    "- Each trial is independent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example: Suppose we flip a fair coin 5 times in a row. What is probability of getting exactly 1 head."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Random variable X = Number of heads (success) from flipping a coin 5 times\n",
+    "\n",
+    "\n",
+    "A) What is a trial.\n",
+    "- Each flip of coin is a trial\n",
+    "- number of trials = 5\n",
+    "\n",
+    "B) Define what is 'success'.\n",
+    "- Getting 'heads' in a coin toss\n",
+    "- probability of success (getting 'heads') = 0.5 \n",
+    "\n",
+    "\n",
+    "Total possible outcomes for 5 coin flips = ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Y axis = probability of the event happening\n",
+    "- X axis = number of trials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### this is how you calculate it manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for P(x=0) <--- ie Zero heads in 5 trials\n",
+    "# in this example. you get ZERO heads\n",
+    "# Probability(X = 0) = 1/32 <-- 1/32 chances that youll get zero heads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03125"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Probability (X = 1) i.e 1 head in 5 trials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15625"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/32 * 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### this is how you do it using Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Binomial Parameters\n",
+    "n_trials = 5 \n",
+    "p= 0.5 #probability of success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define \n",
+    "flips = stats.binom(n_trials, p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### probability of getting zero heads?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03125"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flips.pmf(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### probability of getting 2 heads?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3125"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flips.pmf(2)"
    ]
   },
   {
