--- a/probability_distributions_lesson.ipynb
+++ b/probability_distributions_lesson.ipynb
@@ -700,13 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Binomial Parameters:\n",
     "\n",
-    "\n"
+    "n_trials = 5 \n",
+    "p= 0.5 \n",
+    "\n",
+    "#define \n",
+    "flips = stats.binom(n_trials, p)"
    ]
   },
   {
