--- a/probability_distributions_lesson.ipynb
+++ b/probability_distributions_lesson.ipynb
@@ -739,10 +739,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16806999999999994"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.binom(5, 0.7).pmf(5)"
+   ]
   },
   {
    "attachments": {
@@ -759,13 +772,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -779,6 +785,15 @@
     "#### Rigged coin distribution\n",
     "Probability of success (getting heads in a coin toss) = 0.2  \n",
     "Number of trials = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.binom(5, 0.7).pmf(5)"
    ]
   },
   {
@@ -805,16 +820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# What kind of distribution is this? \n",
+    "#binomial distribution\n",
     "\n",
-    "\n",
-    "#success?\n",
+    "#success? = answering question correctly. 1/4\n",
     "\n",
     "# Random variable X?\n",
+    "# number of questions answered correctly\n",
     "\n"
    ]
   },
