complete prob distr exercises

--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -236,13 +236,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mean= 15\n",
-    "std_dev = 3\n",
-    "#order time= 10 min/person to order"
+    "mean= 15 * 2\n",
+    "std_dev = 3 * 2\n",
+    "\n",
+    "total_lunch_time = 60 #mins\n",
+    "order_time = 2 #mins\n",
+    "eat_time = 15 #mins\n",
+    "cook_time = 10 #mins\n",
+    "\n",
+    "max_wait = total_lunch_time - order_time - eat_time - cook_time\n",
+    "max_wait"
    ]
   },
   {
@@ -257,21 +275,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7ffdaaee1b80>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "stats.norm(15, 3)"
+    "stats.norm(mean, std_dev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6914624612740131"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "time_to_eat = stats.norm(15, 3).sf(14)\n",
-    "time_to_eat"
+    "stats.norm(mean, std_dev).cdf(max_wait)"
    ]
   },
   {
