--- a/Hypothesis Testing Overview Notes.ipynb
+++ b/Hypothesis Testing Overview Notes.ipynb
@@ -43,7 +43,8 @@
     "           - x = fiber, no fiber\n",
     "           - y = # of customers\n",
     "           - will need legend (churn, no churn)\n",
-    "    - Multivariate\n",
+    "           \n",
+    "   - Multivariate\n",
     "        - multiple variables\n",
     "            - (ex) male subset, compare proportion of those who servived alone vs with someone else"
    ]
@@ -144,15 +145,15 @@
    "source": [
     "### Vocabulary:\n",
     "\n",
-    "#### null hypothesis (H0):\n",
+    "#### null hypothesis $H_0$:\n",
     "   - assumes everything is normal\n",
     "   - defaul hypothesis\n",
-    "        -(ex): there is no difference between \n",
+    "        - (ex): there is no difference between \n",
     "   - boring\n",
     "   \n",
-    "#### alternative hypothesis (H1):\n",
+    "#### alternative hypothesis $H_a$:\n",
     "   - this is the question you're asking\n",
-    "       -(ex): there is a significant difference between the tenure of people with dependents and people without\n",
+    "       - (ex): there is a significant difference between the tenure of people with dependents and people without\n",
     "       \n",
     "#### significance level:\n",
     "   - 0.05 (general exceptance)\n",
