--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -15,39 +15,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Has the network latency gone up since we switched internet service providers?\n",
+    "#### #1. Has the network latency gone up since we switched internet service providers?\n",
     "- $H_{0}$: there is no change to network latency since switching providers\n",
     "- $H_{a}$: there is a change in network latency since switching providers\n",
     "- True Positive: I reject the $H_{0}$, and the network latency has chanced since switching providers\n",
-    "- True Negative: I accept the $H_{0}$, and the network latency has not chanced since switching providers\n",
+    "- True Negative: I fail to reject the $H_{0}$, and the network latency has not chanced since switching providers\n",
     "- Type I error: I reject the $H_{0}$, but switching provides does not change network latency\n",
-    "- Type II error: I accept the $H_{0}$, but switching provides does change network latency\n"
+    "- Type II error: I fail to reject the $H_{0}$, but switching provides does change network latency\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Is the website redesign any good?\n",
+    "#### #2. Is the website redesign any good?\n",
     "- $H_{0}$: the website redesign has caused no change in revenue\n",
     "- $H_{a}$: the website redesign has caused revenue to increase significantly\n",
     "- True Positive: I reject the $H_{0}$, and the web redesign does change revenue\n",
-    "- True Negative: I accept the $H_{0}$, and web redesign do not change revenue\n",
+    "- True Negative: I fail to reject the $H_{0}$, and web redesign do not change revenue\n",
     "- Type I error: I reject the $H_{0}$,but web redesign do not change revenue\n",
-    "- Type II error: I accept the $H_{0}$, but web redesign do change revenue"
+    "- Type II error: I fail to reject the $H_{0}$, but web redesign do change revenue"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Is our television ad driving more sales?\n",
+    "#### #3. Is our television ad driving more sales?\n",
     "- $H_{0}$: the television ad is not driving more sales \n",
     "- $H_{a}$: the television ad does drive more sales\n",
     "- True Positive: I reject the $H_{0}$, and the television ads do drive sales\n",
-    "- True Negative: I accept the $H_{0}$, and television ads do not drive more sales\n",
+    "- True Negative: I fail to reject the $H_{0}$, and television ads do not drive more sales\n",
     "- Type I error: I reject the $H_{0}$,but television ads do not drive sales\n",
-    "- Type II error: I accept the $H_{0}$, but television ads do drive sales"
+    "- Type II error: I fail to reject the $H_{0}$, but television ads do drive sales"
    ]
   },
   {
@@ -765,9 +765,9 @@
     "- $H_{0}$: room count does not increase tax\n",
     "- $H_{a}$: room count does increase tax\n",
     "- True Positive: I reject the $H_{0}$, and room count does increase tax value\n",
-    "- True Negative: I accept the $H_{0}$, and room count does not increase tax value\n",
+    "- True Negative: I fail to reject the $H_{0}$, and room count does not increase tax value\n",
     "- Type I error: I reject the $H_{0}$,but room count does not increase tax value\n",
-    "- Type II error: I accept the $H_{0}$, but room count does increase tax value "
+    "- Type II error: I fail to reject the $H_{0}$, but room count does increase tax value "
    ]
   },
   {
@@ -994,9 +994,9 @@
     "- $H_{0}$: finished square feet does not increase bathroom count\n",
     "- $H_{a}$: finished square feet does increase bathroom count\n",
     "- True Positive: I reject the $H_{0}$, and finished square feet does increase bathroom count\n",
-    "- True Negative: I accept the $H_{0}$, and finished square feet does not increase bathroom count\n",
+    "- True Negative: I fail to reject the $H_{0}$, and finished square feet does not increase bathroom count\n",
     "- Type I error: I reject the $H_{0}$,but finished square feet does not increase increase bathroom count\n",
-    "- Type II error: I accept the $H_{0}$, but finished square feet does increase bathroom count "
+    "- Type II error: I reject the $H_{0}$, but finished square feet does increase bathroom count "
    ]
   },
   {
