--- a/Comparing Means Notes.ipynb
+++ b/Comparing Means Notes.ipynb
@@ -1319,8 +1319,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### decide p/2 if its one tailed\n",
-    "### do not decide p by 2 is it is 2 tailed"
+    "### devide p/2 if its one tailed\n",
+    "### do not devide p by 2 is it is 2 tailed"
    ]
   },
   {
