--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -3096,6 +3096,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#give values to x and y\n",
     "x= sleepstudy.Days\n",
     "y= sleepstudy.Reaction\n",
     "alpha= 0.5"
