more notes for correlation

--- a/Correlation Testing Notes.ipynb
+++ b/Correlation Testing Notes.ipynb
@@ -905,7 +905,10 @@
     "#### Pearsons is ONLY for linear correlation\n",
     "\n",
     "#### Correlation is Not Causation:\n",
-    "- Correlation means that two variables are associated, but doesn't tell us whether one causes the other or not."
+    "- Correlation means that two variables are associated, but doesn't tell us whether one causes the other or not.\n",
+    "\n",
+    "#### removing NaN or Nulls\n",
+    "- df=df.dropna()"
    ]
   },
   {
